[build-system]
requires = [
    "setuptools>=82.0.1,<83",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "computer-languages"
version = "1.0.3"
description = "File extensions for computer languages."
authors = [
    { name = "Adam Lui", email = "adam@kudoai.com" },
]
readme = "docs/README.md"
license = "MIT"
license-files = [
    "docs/LICENSE.md",
]
requires-python = ">=2.6,<4"
keywords = [
    "asciidoc",
    "bash",
    "c",
    "c#",
    "c++",
    "code-languages",
    "computer-languages",
    "csv",
    "dart",
    "data-languages",
    "extensions",
    "file‑type-detection",
    "file-extensions",
    "filenames",
    "github",
    "go",
    "html",
    "java",
    "javascript",
    "json",
    "kotlin",
    "language-detection",
    "languages",
    "linguist",
    "markdown",
    "markup-languages",
    "php",
    "powershell",
    "programming-languages",
    "prose-languages",
    "python",
    "ruby",
    "rust",
    "shell",
    "sql",
    "swift",
    "syntax-highlighting",
    "toml",
    "typescript",
    "xml",
    "yaml",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.6",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Database",
    "Topic :: Documentation",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: General",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]

[project.urls]
Changelog = "https://github.com/adamlui/python-utils/releases/tag/computer-languages-1.0.3"
Documentation = "https://github.com/adamlui/python-utils/tree/main/computer-languages/docs"
Funding = "https://github.com/sponsors/adamlui"
Homepage = "https://github.com/adamlui/python-utils/tree/main/computer-languages/#readme"
Issues = "https://github.com/adamlui/python-utils/issues"
"PyPI Stats" = "https://pepy.tech/projects/computer-languages"
Releases = "https://github.com/adamlui/python-utils/releases"
Repository = "https://github.com/adamlui/python-utils"

[project.optional-dependencies]
dev = [
    "nox>=2026.4.10",
    "pre-commit>=4.5.1,<5",
    "tomli>=2.4.1,<3",
    "tomli-w>=1.2.0,<2",
]

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.setuptools.package-data]
computer_languages = [
    "computer-languages.json",
]
