[build-system]
requires = [
    "setuptools>=82.0.1,<83",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "find-project-root"
version = "1.0.4"
description = "Locate project root via custom markers."
authors = [
    { name = "Adam Lui", email = "adam@kudoai.com" },
]
readme = "docs/README.md"
license = "MIT"
license-files = [
    "docs/LICENSE.md",
]
dependencies = [
    "colorama>=0.4.6,<1 ; platform_system == 'Windows'",
    "is-unicode-supported>=1.2.1,<2",
    "json5>=0.14.0,<1",
    "non-latin-locales>=1.0.5,<2",
    "project-markers>=1.0.4,<2",
    "sys-lang>=1.0.1,<2",
]
requires-python = ">=3.8,<4"
keywords = [
    "detect",
    "detection",
    "dev-tool",
    "directory",
    "filesystem",
    "git-root",
    "locate-root",
    "marker-files",
    "path-finder",
    "project-root",
    "root-detection",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.6",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development",
    "Topic :: Software Development :: Version Control",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Changelog = "https://github.com/adamlui/python-utils/releases/tag/find-project-root-1.0.4"
Documentation = "https://github.com/adamlui/python-utils/tree/main/find-project-root/docs"
Funding = "https://github.com/sponsors/adamlui"
Homepage = "https://github.com/adamlui/python-utils/tree/main/find-project-root/#readme"
Issues = "https://github.com/adamlui/python-utils/issues"
Releases = "https://github.com/adamlui/python-utils/releases"
Repository = "https://github.com/adamlui/python-utils"

[project.scripts]
project-root = "find_project_root.cli.__main__:main"
get-project-root = "find_project_root.cli.__main__:main"
find-project-root = "find_project_root.cli.__main__:main"
projectroot = "find_project_root.cli.__main__:main"
getprojectroot = "find_project_root.cli.__main__:main"
findprojectroot = "find_project_root.cli.__main__:main"

[project.optional-dependencies]
dev = [
    "nox>=2026.4.10",
    "pre-commit>=4.5.1,<5",
    "remove-json-keys>=1.10.1,<2",
    "tomli>=2.4.1,<3",
    "tomli-w>=1.2.0,<2",
    "translate-messages>=1.10.1,<2",
]
