[build-system]
requires = [
    "setuptools~=82.0.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "is-unicode-supported"
version = "1.1.0"
description = "Detect whether the terminal supports advanced Unicode."
authors = [
    { name = "Adam Lui", email = "adam@kudoai.com" },
]
readme = "docs/README.md"
license = "MIT"
license-files = [
    "docs/LICENSE.md",
]
dependencies = [
    "blessed~=1.33.0",
    "colorama~=0.4.6 ; platform_system == 'Windows'",
    "is-legacy-terminal~=1.0.0",
    "json5~=0.13.0",
]
requires-python = ">=3.8,<4"
keywords = [
    "api",
    "arabic",
    "chinese",
    "cjk",
    "cli",
    "compatibility",
    "console",
    "detect",
    "detection",
    "dev-tool",
    "emoji",
    "hebrew",
    "japanese",
    "korean",
    "shell",
    "support",
    "supported",
    "supports",
    "terminal",
    "unicode",
    "utf8",
    "wide-characters",
    "zero-width",
    "zwj",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Localization",
    "Topic :: System",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Changelog = "https://github.com/adamlui/python-utils/releases/tag/is-unicode-supported-1.1.0"
Documentation = "https://github.com/adamlui/python-utils/tree/main/is-unicode-supported/docs"
Funding = "https://github.com/sponsors/adamlui"
Homepage = "https://github.com/adamlui/python-utils/tree/main/is-unicode-supported/#readme"
Issues = "https://github.com/adamlui/python-utils/issues"
"PyPI Stats" = "https://pepy.tech/projects/is-unicode-supported"
Releases = "https://github.com/adamlui/python-utils/releases"
Repository = "https://github.com/adamlui/python-utils"

[project.scripts]
is-unicode-supported = "is_unicode_supported.cli.__main__:main"
isunicodesupported = "is_unicode_supported.cli.__main__:main"

[project.optional-dependencies]
dev = [
    "nox>=2026.2.9",
    "remove-json-keys~=1.9.0",
    "tomli~=2.4.0",
    "tomli-w~=1.2.0",
    "translate-messages~=1.9.0",
]

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.setuptools.package-data]
is_unicode_supported = [
    "data/*.json",
    "data/_locales/en/messages.json",
]
