[build-system]
requires = [
    "setuptools~=82.0.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "project-markers"
version = "1.0.1"
description = "List of files that indicate a project root"
authors = [
    { name = "Adam Lui", email = "adam@kudoai.com" },
]
readme = "docs/README.md"
license = "MIT"
license-files = [
    "docs/LICENSE.md",
]
requires-python = ">=2.6,<4"
keywords = [
    "detection",
    "files",
    "json",
    "markers",
    "project",
    "root",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.6",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control",
    "Topic :: Utilities",
]

[project.urls]
Changelog = "https://github.com/adamlui/python-utils/releases/tag/project-markers-1.0.1"
Documentation = "https://github.com/adamlui/python-utils/tree/main/project-markers/docs"
Funding = "https://github.com/sponsors/adamlui"
Homepage = "https://github.com/adamlui/python-utils/tree/main/project-markers/#readme"
Issues = "https://github.com/adamlui/python-utils/issues"
"PyPI Stats" = "https://pepy.tech/projects/project-markers"
Releases = "https://github.com/adamlui/python-utils/releases"
Repository = "https://github.com/adamlui/python-utils"

[project.optional-dependencies]
dev = [
    "nox>=2026.2.9",
    "tomli~=2.4.0",
    "tomli-w~=1.2.0",
]

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.setuptools.package-data]
project_markers = [
    "project_markers.json",
]
