[build-system]
requires = [
    "setuptools>=82.0.1,<83",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "prose-languages"
version = "1.0.3"
description = "File extensions for prose languages."
authors = [
    { name = "Adam Lui", email = "adam@kudoai.com" },
]
readme = "docs/README.md"
license = "MIT"
license-files = [
    "docs/LICENSE.md",
]
requires-python = ">=2.6,<4"
keywords = [
    "asciidoc",
    "computer-languages",
    "creole",
    "extensions",
    "file-extensions",
    "file‑type-detection",
    "filenames",
    "gemini",
    "gettext-catalog",
    "github",
    "language-detection",
    "languages",
    "linguist",
    "markdown",
    "muse",
    "org",
    "pod",
    "pod-6",
    "prose-languages",
    "rdoc",
    "restructuredtext",
    "rmarkdown",
    "sweave",
    "syntax-highlighting",
    "texinfo",
    "text",
    "textile",
    "vim-help-file",
    "wikitext",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.6",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Documentation",
    "Topic :: Education",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Utilities",
]

[project.urls]
Changelog = "https://github.com/adamlui/python-utils/releases/tag/prose-languages-1.0.3"
Documentation = "https://github.com/adamlui/python-utils/tree/main/prose-languages/docs"
Funding = "https://github.com/sponsors/adamlui"
Homepage = "https://github.com/adamlui/python-utils/tree/main/prose-languages/#readme"
Issues = "https://github.com/adamlui/python-utils/issues"
"PyPI Stats" = "https://pepy.tech/projects/prose-languages"
Releases = "https://github.com/adamlui/python-utils/releases"
Repository = "https://github.com/adamlui/python-utils"

[project.optional-dependencies]
dev = [
    "nox>=2026.4.10",
    "pre-commit>=4.5.1,<5",
    "tomli>=2.4.1,<3",
    "tomli-w>=1.2.0,<2",
]

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.setuptools.package-data]
prose_languages = [
    "prose-languages.json",
]
